edits to initial buildout

--- a/edits.html
+++ b/edits.html
@@ -30,10 +30,10 @@
               Bethany Stuff 3
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Bethany</a>
-              <a class="dropdown-item" href="#">Bethany</a>
-              <a class="dropdown-item" href="#">Bethany</a>
-            </div>
+                <a class="dropdown-item" href="#">Something Bethany needs here</a>
+                <a class="dropdown-item" href="#">Something else Bethany needs here</a>
+                <a class="dropdown-item" href="#">Another thing Bethany needs here</a>
+              </div>
           </li>
          
         
