--- a/richmond.html
+++ b/richmond.html
@@ -30,9 +30,9 @@
               Bethany Stuff 3
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Bethany</a>
-              <a class="dropdown-item" href="#">Bethany</a>
-              <a class="dropdown-item" href="#">Bethany</a>
+              <a class="dropdown-item" href="#">Something Bethany needs here</a>
+              <a class="dropdown-item" href="#">Something else Bethany needs here</a>
+              <a class="dropdown-item" href="#">Another thing Bethany needs here</a>
             </div>
           </li>
          
@@ -43,7 +43,7 @@
     <div class="jumbotron jumbotron-fluid dark">
         <div class="container">
           <h1 class="display-4"><strong>Edits and Deletions for OMs</strong></h1>
-          <p class="lead">These buttons would link to a form and would automatically email the OM - it is not coded out, but if you like it I can do it</p>
+          <p class="lead">These buttons link to a form and automatically email their respective OM - Richmond button is live</p>
         </div>
       </div>
 
