--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
         
-          <li class="nav-item">
-            <a class="nav-link" href="edits.html">Edits and Deletions</a>          
-          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Edits and Deletions
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="edits.html">Send a new Edit</a>
+                  <a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/16KDQVUGjxiwUj9kFgWLBEQVDEevF4YEtEMjLdpQqEW0/edit#gid=659425496">Check status of edits</a>
+  
+                </div>
+            </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Bethany Stuff 2</a>
           </li>
