buildout chesterfield edit button and form

--- a/richmond.html
+++ b/richmond.html
@@ -49,7 +49,7 @@
     <div class="jumbotron jumbotron-fluid dark">
         <div class="container">
           <h1 class="display-4"><strong>Edits and Deletions for OMs</strong></h1>
-          <p class="lead">These buttons link to a form and automatically email their respective OM - Richmond button is live</p>
+          <p class="lead">Jake Millhouse and Corey Sostre will automatically be notified of your request upon form submission.</p>
         </div>
       </div>
 
